fix form overlapping bug
Reviewed-on: https://gerrit.instructure.com/20573
Product-Review: Brian Whitmer <brian@instructure.com>
QA-Review: Brian Whitmer <brian@instructure.com>
Tested-by: Brian Whitmer <brian@instructure.com>

--- a/public/common.css
+++ b/public/common.css
@@ -1,3 +1,6 @@
+form.form-horizontal {
+  height: auto;
+}
 .comment {
     clear: left;
     padding-top: 5px;
